--- a/categorias/templates/adcategoria.html
+++ b/categorias/templates/adcategoria.html
@@ -17,7 +17,7 @@
                 <label>Nome:</label>
                 <input class="form-control" type="text" name="ncategoria" id="ncategoria" placeholder="Nome categoria">
                 <label>Descrição:</label>
-                <textarea class="ultimo-elemento form-control" id="dcategoria" name="dcategoria" rows="2" cols="30"></textarea>
+                <textarea class="espaco-baixo form-control" id="dcategoria" name="dcategoria" rows="2" cols="30"></textarea>
                 <div class="botoes">
                     <input type="submit" value="Salvar" class="btn btn-success acat">
                     <a href="{% url 'categorias:listacategorias' %}" class="btn btn-info">Voltar</a>
