--- a/fornecedores/templates/editarfornecedor.html
+++ b/fornecedores/templates/editarfornecedor.html
@@ -19,7 +19,7 @@
                 <input class="form-control" type="text"  value="{{fn.nome}}" name="nfornecedor" id="nfornecedor">
                 <!--class="form-control"-->
                 <label>CNPJ:</label>
-                <input class="form-control ultimo-elemento" type="text"  value="{{fn.cnpj}}" name="cnpj" id="cnpj">
+                <input class="form-control espaco-baixo" type="text"  value="{{fn.cnpj}}" name="cnpj" id="cnpj">
 
                 
                 <div class="botoes">
