--- a/pedidos/templates/editarpedido.html
+++ b/pedidos/templates/editarpedido.html
@@ -2,50 +2,58 @@
 {% load static %}
 
 {% block 'titulo' %}iMercado - Editar pedido{% endblock %}
+{% block 'head' %}
+    <link rel="stylesheet" type="text/css" href="{% static 'pedidos/css/estilo.css' %}">
+{% endblock %}
 {% block 'conteudo' %}
 <main>
+
+    <div class="com-borda-pedido">
     
-    <h1>Editar pedido {{ped.id}}</h1>
+        <h1>Editar pedido {{ped.id}}</h1>
 
-    <form action="{% url 'pedidos:editarpedidobd' %}" method="POST">
-        {% csrf_token %}
+        <form action="{% url 'pedidos:editarpedidobd' %}" method="POST">
+            {% csrf_token %}
 
 
-        <h6>Produto:</h6>
-        <p>{{ped.produto.nome}}</p>
-        <input type="hidden" name="ped_produto" value="{{ped.produto.id}}">
-        <input type="hidden" name="pedido_id" value="{{ped.id}}">
-        <label>Filial:</label>
-        <input type="text" name="filial" id="filial" placeholder="Nome filial" value="{{ped.filial}}">
+            <h6>Produto: {{ped.produto.nome}}</h6>
+            
+            <input type="hidden" name="ped_produto" value="{{ped.produto.id}}">
+            <input type="hidden" name="pedido_id" value="{{ped.id}}">
+            <label>Filial:</label>
+            <input class="form-control" type="text" name="filial" id="filial" placeholder="Nome filial" value="{{ped.filial}}">
 
-        <label>Quantidade:</label>
-        <input id="qnt" name="qnt" value="{{ped.qntnovosprods}}" ></input>
+            <label>Quantidade:</label>
+            <input class="form-control" id="qnt" name="qnt" value="{{ped.qntnovosprods}}" ></input>
 
-        <label>Status:</label>
-        <select  id="sts_pedido" name="sts_pedido">
-             {% for p in ped.status_opc %}
-                {% if p.0 == ped.status %}
-                    <option value="{{p.0}}" selected>{{p.1}}</option>
-                {% else %}
-                    <option value="{{p.0}}">{{p.1}}</option>
-                {% endif %}
-             {% endfor%}
-        </select>
+            <label>Status:</label>
+            <select class="form-control" id="sts_pedido" name="sts_pedido">
+                {% for p in ped.status_opc %}
+                    {% if p.0 == ped.status %}
+                        <option value="{{p.0}}" selected>{{p.1}}</option>
+                    {% else %}
+                        <option value="{{p.0}}">{{p.1}}</option>
+                    {% endif %}
+                {% endfor%}
+            </select>
 
-        <label>Pagamento:</label>
-        <select  id="pag_pedido" name="pag_pedido">
-            {% for e in ped.escolhas_pag %}
-                {% if e.0 == ped.pagamento %}
-                    <option value="{{e.0}}" selected>{{e.1}}</option>
-                {% else %}
-                    <option value="{{e.0}}">{{e.1}}</option>
-                {% endif %}
-            {% endfor%}
-        </select>
+            <label>Pagamento:</label>
+            <select class="form-control espaco-baixo" id="pag_pedido" name="pag_pedido">
+                {% for e in ped.escolhas_pag %}
+                    {% if e.0 == ped.pagamento %}
+                        <option value="{{e.0}}" selected>{{e.1}}</option>
+                    {% else %}
+                        <option value="{{e.0}}">{{e.1}}</option>
+                    {% endif %}
+                {% endfor%}
+            </select>
 
-        <input type="submit" value="Salvar" class="btn btn-success edcat">
-    </form>
-
+            <div class="botoes">
+                <input type="submit" value="Salvar" class="btn btn-success edcat">
+                <a href="{% url 'pedidos:verpedido' ped.id %}" class="btn btn-info">Voltar</a>
+            </div>
+        </form>
+    </div>
     
 </main>
 
