--- a/produtos/templates/altimagemprod.html
+++ b/produtos/templates/altimagemprod.html
@@ -8,22 +8,25 @@
 
 {% block 'conteudo' %}
 <main>
-    <h1>Alterar imagem</h1>
+    <div class="com-borda espaco-baixo">
+        <h1>Alterar imagem</h1>
     
-        <span>Produto {{pr.nome}}</span>
+        <label class="espaco-baixo">Produto {{pr.nome}}</label>
           
         <form action="{% url 'produtos:alterarimagem' %}" method="post" enctype='multipart/form-data'>
             {% csrf_token %}
             <input type="hidden" name="produto_id" value="{{pr.id}}">
             <input type="hidden" name="imagem_antiga" value="{{pr.img.url}}">
             <label>Novo Logo:</label>
-            <input id="id_image" type="file" class="" Required name="image">
+            <input class="espaco-baixo" id="id_image" type="file" class="" Required name="image">
 
-            <input type="submit" value="Salvar" class="btn btn-success aprimg">
-            <a href="{% url 'produtos:editarproduto' pr.id %}" class="btn btn-danger">Voltar</a>
+            <div class="botoes">
+                <input type="submit" value="Salvar" class="btn btn-success aprimg">
+                <a href="{% url 'produtos:editarproduto' pr.id %}" class="btn btn-danger">Voltar</a>
+            </div>
 
         </form>     
-                     
+    </div>          
 </main>
 <script src="{% static 'produtos/js/funcoes.js' %}"></script>
 {% endblock %}
