--- a/produtos/templates/verproduto.html
+++ b/produtos/templates/verproduto.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block 'conteudo' %}
 <main>
-    <div class="com-borda ultimo-elemento">
+    <div class="com-borda espaco-baixo">
         <div class="col-md">
             <h1>Produto {{pr.id}}</h1>
             <img class="imagem" src="{{pr.img.url}}" alt="logo">
