--- a/categorias/templates/editarcategoria.html
+++ b/categorias/templates/editarcategoria.html
@@ -18,7 +18,7 @@
                 <input class="form-control" type="text"  value="{{cat.nome}}" name="ncategoria" id="ncategoria">
                 <!--class="form-control"-->
                 <label>Descrição:</label>
-                <input type="text" class="form-control ultimo-elemento" id="dcategoria" value="{{cat.descricao}}" name="dcategoria" ></input>
+                <input type="text" class="form-control espaco-baixo" id="dcategoria" value="{{cat.descricao}}" name="dcategoria" >
                 <div class="botoes">
                     <input type="submit" value="Salvar" class="btn btn-success edcat">
                     <a href="{% url 'categorias:vercategoria' cat.id %}" class="btn btn-danger">Cancelar</a>
