--- a/fornecedores/templates/adfornecedor.html
+++ b/fornecedores/templates/adfornecedor.html
@@ -10,18 +10,19 @@
 
     <div class="com-borda">
         <div class="col-md centro">
-        <h1>Adicionar novo fornecedor</h1>
+        <h1 class="espaco-baixo">Adicionar novo fornecedor</h1>
 
         <form action="{% url 'fornecedores:fornecedoresbd' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
 
             <label>Logo:</label>
-            <input id="id_image" type="file"  Required name="image">
+            <input class="espaco-baixo" id="id_image" type="file"  Required name="image">
+            
             <label>Nome:</label>
-            <input type="text" name="nfornecedor" id="nfornecedor" placeholder="Nome fornecedor">
+            <input class="form-control" type="text" name="nfornecedor" id="nfornecedor" placeholder="Nome fornecedor">
 
             <label>CNPJ:</label>
-            <input id="cnpj" name="cnpj"></input>
+            <input class="form-control espaco-baixo" id="cnpj" name="cnpj"></input>
             <div class="botoes">
                 <input type="submit" value="Salvar" class="btn btn-success afn">
                 <a href="{% url 'fornecedores:listafornecedores' %}" class="btn btn-info">Voltar</a>
