--- a/templates/static/categorias/css/estilo.css
+++ b/templates/static/categorias/css/estilo.css
@@ -11,6 +11,7 @@ main h1{
 }
 
 .com-borda{
+    width: 40%;
     border: 1px solid black;
     padding: 15px;
     border-radius: 10px;
@@ -44,7 +45,7 @@ form{
     justify-content: end;
 }
 
-.ultimo-elemento{
+.espaco-baixo{
     margin-bottom: 25px;
 }
 
