--- a/templates/static/pedidos/css/estilo.css
+++ b/templates/static/pedidos/css/estilo.css
@@ -10,12 +10,13 @@ main h1{
     color: rgb(207, 104, 40);
 }
 
-.com-borda{
+.com-borda-pedido{
+    width: 40%;
     border: 1px solid black;
     padding: 15px;
     border-radius: 10px;
     box-shadow:10px 10px 5px rgb(86, 33, 33);
-    background-color:rgb(246, 237, 223);
+    background-color:#F2F2F2;
 }
 
 body a{
@@ -41,4 +42,17 @@ ul li{
 .foto-ped{
     height: 40px;
     width: 40px;
+}
+
+.espaco-baixo{
+    margin-bottom: 25px;
+}
+
+div.espaco-baixo{
+    margin-bottom: 100px;
+}
+
+label,h6{
+    font-weight: bold;
+    color: rgb(131, 35, 35);
 }
