--- a/templates/base.html
+++ b/templates/base.html
@@ -50,8 +50,7 @@
             <a class="dropdown-item" href="{% url 'categorias:adcategoria' %}">Categoria</a>
             <a class="dropdown-item" href="{% url 'produtos:adproduto' %}">Produto</a>
             <a class="dropdown-item" href="{% url 'fornecedores:adfornecedor' %}">Fornecedor</a>
-            <a class="dropdown-item" href="">Exportar para JSON</a>
-            <a class="dropdown-item" href="">Importar JSON</a>
+            <a class="dropdown-item" href="{% url 'sistema:pagjson' %}">JSON</a>
           </div>
         </li>
         <li class="nav-item active">
