--- a/sistema/templates/paginasjson/pagexportar.html
+++ b/sistema/templates/paginasjson/pagexportar.html
@@ -8,8 +8,10 @@
 
 {% block 'conteudo' %}
 <main>
-   <h1>Importar JSON</h1>
-   <h1>Exportar JSON</h1>
+   <a class="btn btn-warning espaco-baixo" href="{% url 'sistema:exportarcategorias' %}">Exportar Categoria</a>
+   <a class="btn btn-info espaco-baixo" href="">Exportar Fornecedor</a>
+   <a class="btn btn-success espaco-baixo" href="">Exportar Produto</a>
+   <a class="btn btn-light espaco-baixo" href="">Exportar Pedido</a>
            
         
         
