--- a/sistema/templates/paginasjson/pagexportar.html
+++ b/sistema/templates/paginasjson/pagexportar.html
@@ -8,7 +8,8 @@
 
 {% block 'conteudo' %}
 <main>
-   <a class="btn btn-warning espaco-baixo" href="{% static 'dados/categorias.zip' %}" download="categorias.zip">Exportar Categoria</a>
+   <a class="btn btn-warning espaco-baixo" href="{% static 'dados/categorias.zip' %}" download="categorias.zip">Exportar Categoria</a><!---->
+   <a class="btn btn-warning espaco-baixo" href="{% url 'sistema:exportarcategorias' %}">Exportar Categoria DJ</a>
    <a class="btn btn-info espaco-baixo" href="">Exportar Fornecedor</a>
    <a class="btn btn-success espaco-baixo" href="">Exportar Produto</a>
    <a class="btn btn-light espaco-baixo" href="">Exportar Pedido</a>
