--- a/sistema/templates/inicio.html
+++ b/sistema/templates/inicio.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block 'titulo' %}iMercado{% endblock %}
 {% block 'head' %}
     <link rel="stylesheet" type="text/css" href="{% static 'sistema/css/estilo.css' %}">
 {% endblock %}
