--- a/sistema/templates/paginasjson/pagexportar.html
+++ b/sistema/templates/paginasjson/pagexportar.html
@@ -8,12 +8,18 @@
 
 {% block 'conteudo' %}
 <main>
-   <a class="btn btn-warning espaco-baixo" href="{% static 'dados/categorias.zip' %}" download="categorias.zip">Exportar Categoria</a><!---->
-   <a class="btn btn-warning espaco-baixo" href="{% url 'sistema:exportarcategorias' %}">Exportar Categoria DJ</a>
+    <h1>Aqui</h1>
+   {% if tabela == Categorias%}
+   <a class="btn btn-warning espaco-baixo" href="{% static 'dados/categorias.zip' %}" download="categorias.zip">Exportar Categoria</a>
+   {% elif tabela == Fornecedores%}
    <a class="btn btn-info espaco-baixo" href="">Exportar Fornecedor</a>
+   {% elif tabela == Produtos%}
    <a class="btn btn-success espaco-baixo" href="">Exportar Produto</a>
+   {%elif tabela == Pedidos %}
    <a class="btn btn-light espaco-baixo" href="">Exportar Pedido</a>
-           
+   {% else %}
+   <p>Erro</p>
+   {% endif %}
         
         
 </main>
