--- a/sistema/templates/paginasjson/gerar.html
+++ b/sistema/templates/paginasjson/gerar.html
@@ -11,9 +11,9 @@
    <!---->
 
    <a class="btn btn-warning espaco-baixo" href="{% url 'sistema:exportarcategorias' %}">Gerar categorias.json</a>
-   <a class="btn btn-info espaco-baixo" href="">Gerar fornecedores.json</a>
-   <a class="btn btn-success espaco-baixo" href="">Gerar produtos.json</a>
-   <a class="btn btn-light espaco-baixo" href="">Gerar pedidos.json</a>
+   <a class="btn btn-info espaco-baixo" href="{% url 'sistema:exportarfornecedores' %}">Gerar fornecedores.json</a>
+   <a class="btn btn-success espaco-baixo" href="{% url 'sistema:exportarprodutos' %}">Gerar produtos.json</a>
+   <a class="btn btn-light espaco-baixo" href="{% url 'sistema:exportarpedidos' %}">Gerar pedidos.json</a>
            
         
         
