--- a/static/sistema/css/estilo.css
+++ b/static/sistema/css/estilo.css
@@ -11,6 +11,11 @@ main{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    
+}
+
+.tamanho{
+    width: 70%;
 }
 
 .com-borda{
@@ -63,3 +68,22 @@ h6{
     background-color: rgb(216, 207, 207) ;
 }
 
+.foto-ped{
+    height: 40px;
+    width: 40px;
+}
+
+body a{
+    text-decoration: none;
+    color: rgb(131, 35, 35);
+}
+
+body a:hover{
+    color: red;
+}
+
+.imagem{
+    width: 300px;
+    height: 200px;
+    border:1px solid rgb(215, 215, 164)
+}
